Disable subbmitting form with enter key in modals with input boxes

--- a/simcon_project/templates/template_management/edit_folder_name_modal.html
+++ b/simcon_project/templates/template_management/edit_folder_name_modal.html
@@ -21,5 +21,16 @@
     <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
     <button type="button" class="submit-btn btn btn-success">Save</button>
   </div>
+  <script>
+    $(document).on("keypress", 'form', function (e) {
+        var code = e.keyCode || e.which;
+        console.log(code);
+        if (code == 13) {
+            console.log('Inside');
+            e.preventDefault();
+            return false;
+        }
+    });
+  </script>
 
 </form>
