--- a/simcon_project/templates/student_creation_modal.html
+++ b/simcon_project/templates/student_creation_modal.html
@@ -23,5 +23,17 @@
         <button type="button" class="submit-btn btn btn-success">Send Invitation</button>
     </div>
 
+    <script>
+        $(document).on("keypress", 'form', function (e) {
+            var code = e.keyCode || e.which;
+            console.log(code);
+            if (code == 13) {
+                console.log('Inside');
+                e.preventDefault();
+                return false;
+            }
+        });
+    </script>
+
 </form>
 
