--- a/simcon_project/templates/researcher_settings_view.html
+++ b/simcon_project/templates/researcher_settings_view.html
@@ -1,7 +1,7 @@
 {% extends "researcher_base.html" %}
 {% block nav-settingsView %}<strong class="nav_bar_selected"> <svg xmlns="http://www.w3.org/2000/svg" width="20" height="20" fill="currentColor" class="bi bi-gear-fill" viewBox="1 1 16 16">
     <path d="M9.405 1.05c-.413-1.4-2.397-1.4-2.81 0l-.1.34a1.464 1.464 0 0 1-2.105.872l-.31-.17c-1.283-.698-2.686.705-1.987 1.987l.169.311c.446.82.023 1.841-.872 2.105l-.34.1c-1.4.413-1.4 2.397 0 2.81l.34.1a1.464 1.464 0 0 1 .872 2.105l-.17.31c-.698 1.283.705 2.686 1.987 1.987l.311-.169a1.464 1.464 0 0 1 2.105.872l.1.34c.413 1.4 2.397 1.4 2.81 0l.1-.34a1.464 1.464 0 0 1 2.105-.872l.31.17c1.283.698 2.686-.705 1.987-1.987l-.169-.311a1.464 1.464 0 0 1 .872-2.105l.34-.1c1.4-.413 1.4-2.397 0-2.81l-.34-.1a1.464 1.464 0 0 1-.872-2.105l.17-.31c.698-1.283-.705-2.686-1.987-1.987l-.311.169a1.464 1.464 0 0 1-2.105-.872l-.1-.34zM8 10.93a2.929 2.929 0 1 1 0-5.86 2.929 2.929 0 0 1 0 5.858z"/>
-  </svg>Settings </strong>{% endblock %}
+</svg>Settings </strong>{% endblock %}
 {% load static %}
 {% load render_table from django_tables2 %}
 {% block content %}
@@ -16,28 +16,38 @@
         <script src="{% static 'js/jquery.bootstrap.modal.forms.js' %}"></script>
     </head>
     <body>
-    <div class="container-fluid mt-3" style="width: 80%">
-        {% if researchers_table %}
-            <h3>Researchers</h3>
-            {% render_table researchers_table %}
+    <div class="container-fluid mt-4" style="width: 30%">
 
+        {% if messages %}
+            <ul class="messages pl-0">
+                {% for message in messages %}
+                    <div class="alert alert-success alert-dismissible">
+                        <a href="#" class="close" data-dismiss="alert" aria-label="close">&times;</a>
+                        <strong>{{ message|escape }}</strong>
+                    </div>
+                {% endfor %}
+            </ul>
         {% endif %}
-        {% if add_researcher_form %}
-            <div class="row justify-content-center">
-                <div class="col-4">
-                    <p style="text-align:left">Add New Researcher:</p>
-                    <form id="add_researcher_form" method="post">
-                        {% csrf_token %}
-                        {{ add_researcher_form }}
-                        <br>
-                        <button type="submit" class="btn btn-outline-secondary" form="add_researcher_form" name="add_researcher">Send Registration Email</button>
-                    </form>
-                    <br><br><br>
+
+        {% if form.errors %}
+            {% for field in form %}
+                {% for error in field.errors %}
+                    <div class="alert alert-danger alert-dismissible">
+                        <a href="#" class="close" data-dismiss="alert" aria-label="close">&times;</a>
+                        <strong>{{ error|escape }}</strong>
+                    </div>
+                {% endfor %}
+            {% endfor %}
+            {% for error in form.non_field_errors %}
+                <div class="alert alert-danger alert-dismissible">
+                    <a href="#" class="close" data-dismiss="alert" aria-label="close">&times;</a>
+                    <strong>{{ error|escape }}</strong>
                 </div>
-            </div>
+            {% endfor %}
         {% endif %}
-        <div class="row justify-content-center">
-            <div class="col-4 m-3 p-3" style="background-color: white;   border-radius: 5px;">
+
+        <div class="card">
+            <div class="card-body">
                 <form id="form" method="post">
                     {% csrf_token %}
                     {% for field in form %}
@@ -59,11 +69,10 @@
                     </p>
                     <button type="submit" class="btn btn-outline-secondary" form="form" name="change_password">Save changes</button>
                 </form>
-                <br>
             </div>
         </div>
-    </div>
 
+    </div>
     </body>
     </html>
 {% endblock %}
