--- a/simcon_project/templates/student_creation_modal.html
+++ b/simcon_project/templates/student_creation_modal.html
@@ -11,10 +11,17 @@
         <div class="form-group{% if form.student_email.errors %} invalid{% endif %}">
             <label for="{{ form.student_email.id_for_label }}">{{ form.student_email.label }}</label>
             {{ form.student_email }}
-            {% for error in form.student_email.errors %}
-                <p class="help-block">{{ error }}</p>
-            {% endfor %}
         </div>
+        {% if form.errors %}
+            {% for field in form %}
+                {% for error in field.errors %}
+                    <div class="alert alert-danger alert-dismissible">
+                        <a href="#" class="close" data-dismiss="alert" aria-label="close">&times;</a>
+                        <strong>{{ error|escape }}</strong>
+                    </div>
+                {% endfor %}
+            {% endfor %}
+        {% endif %}
     </div>
 
 
