--- a/simcon_project/templates/template_management/edit_folder_name_modal.html
+++ b/simcon_project/templates/template_management/edit_folder_name_modal.html
@@ -11,10 +11,17 @@
      <div class="form-group{% if form.name.errors %} invalid{% endif %}">
          <label for="{{ form.name.id_for_label }}">{{ form.name.label }}</label>
          {{ form.name }}
-         {% for error in form.name.errors %}
-             <p class="help-block">{{ error }}</p>
-         {% endfor %}
      </div>
+      {% if form.errors %}
+          {% for field in form %}
+              {% for error in field.errors %}
+                  <div class="alert alert-danger alert-dismissible">
+                      <a href="#" class="close" data-dismiss="alert" aria-label="close">&times;</a>
+                      <strong>{{ error|escape }}</strong>
+                  </div>
+              {% endfor %}
+          {% endfor %}
+      {% endif %}
   </div>
 
   <div class="modal-footer">
